# iotivity-constrained

./: .travis.yml
api/: CMakeLists.txt
debian/: changelog  control  iotivity-constrained-dev.install  iotivity-constrained-test.install  rules
messaging/: CMakeLists.txt
messaging/coap/: engine.c
patches/: 99_mbedtls_debug_log_filepath.patch  mbedtls_debug_filepath_patch_3
port/: oc_log.h
port/linux/: CMakeLists.txt  Makefile  iotivity-constrained-client-server.pc.in  iotivity-constrained-client.pc.in  iotivity-constrained-server.pc.in  ipadapter.c
security/: CMakeLists.txt  oc_store.c
util/: CMakeLists.txt
